react to-do app: fix wrap content bug

--- a/react-todo-app/src/page/Home/Home.css
+++ b/react-todo-app/src/page/Home/Home.css
@@ -56,6 +56,7 @@ button {
     width: 252px;
     min-height: 80px;
     margin-bottom: 8px;
+    padding: 16px;
     background-color: #FFF;
     border-radius: 8px;
     list-style: none;
@@ -63,14 +64,16 @@ button {
 }
 
 .card__name{
-    width: 100%;
-    font-weight: 500;
 
+   
+    font-weight: 500;
     display: block;
+    word-wrap: break-word;
 }
 .card__desc{
 
     display: block;
+    word-wrap: break-word;
 }
 .card__Btn{
     background: none;
